[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Mon_Cyberman-1.png.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Exclamation.png" type="Texture" id=3]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Ded.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.5, -1.75 )
scale = Vector2( 1.1, 1.1129 )
texture = ExtResource( 1 )
flip_h = true

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 0.7, 1 )
enabled = true
cast_to = Vector2( -200, 0 )

[node name="Exclamation" type="Sprite" parent="."]
position = Vector2( 3, -39 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -8, 0 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -12.0
margin_top = -27.0
margin_right = 52.0
margin_bottom = -11.0
rect_scale = Vector2( 0.5, 0.3 )
tint_over = Color( 0.388235, 0.388235, 0.388235, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
